# terraform-aws-ecs-fastapi

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
tests/: test_health.py
tests_integration/: test_api_live.py
