[project]
name = "terraform-aws-ecs-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Vasyl Radashev",email = "vasiliyradashev24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.4,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
pytest = "^9.0.2"
httpx = "^0.28.1"
requests = "^2.32.5"

